# stockactwatch

./: .env.example  .gitignore  AI_ROADMAP.md  DEPLOYMENT.md  cloudbuild.yaml  pyrightconfig.json
.planning/: PROJECT.md  ROADMAP.md  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pyrightconfig.json  railway.toml  run_hearing_enrichment.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_ix_trades_trade_date.py  0003_add_trgm_search_indexes.py  0004_add_bio_guide_id_and_ticker_info.py  0005_add_ticker_meta.py  0006_add_politician_committees.py  0007_add_committee_hearings.py  0008_add_district_to_politicians.py  0009_widen_ticker_to_text.py  0010_add_suspicion_score.py
backend/app/: cache.py  config.py  db.py  main.py
backend/app/api/: ai.py  cluster.py  conflicts.py  feed.py  internal.py  leaderboard.py  profile_ticker.py  search.py  sectors.py  stats.py  watchlist.py
backend/app/ingestion/: committees.py  normalizer.py  pipeline.py  prices.py  quiver.py  scheduler.py
backend/app/models/: __init__.py  committee_hearing.py  computed_return.py  ingestion_log.py  politician.py  politician_committee.py  price_snapshot.py  ticker_info.py  ticker_meta.py  trade.py  user_ai_history.py  user_watchlist.py
backend/app/schemas/: feed.py  ingestion.py  leaderboard.py  search.py  trade.py
backend/app/services/: ai_summary.py  ask.py  suspicion.py
backend/scripts/: backfill_state_district.py  rescore_suspicion.py  run_bulk_backfill.py
backend/tests/fixtures/: price_snapshots.json  quiver_response.json
(+366 files in other folders)
